// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v2alpha;

import "google/api/resource.proto";
import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.api.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "ExchangeStepAttemptProto";

// An attempt (successful or not) of an ExchangeStep.
message ExchangeStepAttempt {
  option (google.api.resource) = {
    type: "halo.wfanet.org/ExchangeStepAttempt"
    pattern: "recurringExchanges/{recurring_exchange}/exchanges/{exchange}/steps/{exchange_step}/attempts/{exchange_step_attempt}"
  };

  // Resource name.
  string name = 1;

  // An ExchangeStep can have multiple ExchangeStepAttempts. When sorted by
  // `start_time`, these form a contiguous sequence of integers starting at 1.
  // Output-only.
  int32 attempt_number = 2;

  enum State {
    STATE_UNSPECIFIED = 0;

    // The attempt is has not yet reached a terminal state.
    ACTIVE = 2;

    // The attempt has succeeded. There cannot be more attempts for the step.
    // Terminal state.
    SUCCEEDED = 3;

    // The attempt has failed but the `ExchangeStep` can be retried.
    // Terminal state.
    FAILED = 4;

    // The attempt has failed and the `ExchangeStep` should not be retried.
    // Terminal state.
    FAILED_STEP = 5;
  }

  // State of the ExchangeStepAttempt. Output-only.
  State state = 3;

  message DebugLog {
    // When the log entry was made.
    google.protobuf.Timestamp time = 1;

    // Human-readable debug message. This should NOT include any user data.
    string message = 2;
  }
  // Warnings, errors, and other messages for debugging purposes. Append-only.
  repeated DebugLog debug_log_entries = 4;

  // When the ExchangeStepAttempt was created. Output-only.
  google.protobuf.Timestamp start_time = 6;

  // When the ExchangeStepAttempt was last updated. Output-only.
  google.protobuf.Timestamp update_time = 7;
}
